@@ -5,7 +5,7 @@
 \\$2 \(la\\$1\(ra\\$3
 ..
 .if \n(.g .mso www.tmac
-.TH ardj 1 "31 July 2013" "" ardj
+.TH ardj 1 "9 June 2014" "" ardj
 .SH NAME
 ardj \- an internet radio playlist manager
 .SH SYNOPSIS
