@@ -1,5 +1,7 @@
 2014/06/09
 - Using VirtualEnv for local development and testing.
+- No longer installing system-wide config files (in /etc).
+- Fixed broken dependencies.
 
 2013/09/30 (1.2.2)
 - Fix permissions on config files during component startup.
